test/good/generics/return04.px

func f<T>(T x) T*[T] def
    while true do
        break

print f(true)
print f({})
