test/bad/generators/generic04.px

func* f() def
    skip

f()
